<resources>
    <string name="app_name">LifeCalendar</string>
    <string name="next">Далее</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_gender_label">Выберите ваш пол</string>
    <string name="career">Деятельность</string>
    <string name="what_do_you_do_label">Чем вы занимаетесь?</string>
    <string name="who_are_you_label">Кем вы являетесь?</string>
    <string name="status">Статус</string>
    <string name="name">Имя</string>
    <string name="mail">Почта</string>
    <string name="enter_your_email_label">Введите свою почту</string>
    <string name="enter_your_name_label">Введите свое имя</string>
    <string name="email_explanation_text">На эту почту будет отправлен код подтверждения</string>
    <string name="greeting">Это приложение поможет тебе спланировать свою жизнь на многие годы вперед и оставить в памяти светлые моменты твоей жизни.</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="skip">Пропустить</string>
    <string name="mail_code">Введите код из письма</string>
    <string name="confirm">Подтвердить</string>
    <string name="four_num">Код из письма</string>
    <string name="enter_password">Введите пароль</string>
    <string name="password">********</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="birthdate">Выберите дату рождения</string>
    <string name="day">ДД</string>
    <string name="month">ММ</string>
    <string name="year">ГГГГ</string>
    <string name="choose_photo_label">Выберите фото</string>
    <string name="back_label">Назад</string>
    <string name="before_resending">До повторной отправки 30 сек.</string>
    <string name="who_is_this_app_for">Для кого это приложение</string>
    <string name="greeting_text1">Возможно, у вас есть некоторые цели, например, вы хотите написать книгу к 50 годам? Отлично! Поставьте себе цель на определённый год вашей жизни.</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="first_goal">Переехать в место с лучшими условиями которые только могут быть в этом мире.</string>
    <string name="goals">Цели</string>
    <string name="achievements">Достижения</string>
    <string name="enter">Войти</string>
    <string name="or">или</string>
    <string name="first_time_here">Первый раз здесь</string>
    <string name="_12">12</string>
    <string name="male_gender">Мужской</string>
    <string name="password_head">Пароль</string>
    <string name="about_self_head">Обо мне</string>
    <string name="about_self">Расскажите о себе</string>
    <string name="female_gender">Женский</string>
    <string name="information_main">Основная информация</string>
    <string name="age">19 Лет</string>
    <string name="profile_name">Профиль</string>
    <string name="goal_action">Новая Цель</string>
    <string name="goal_name">Цель/достижение</string>
    <string name="come_up_with_name">Придумайте название</string>
    <string name="description">Описание... (необязательно)</string>
    <string name="write_about_task">Опишите детали вашей задачи</string>
    <string name="save">Сохранить</string>
    <string name="long_desc">Описание описание Описание описание Описание описание Описание описание Описание описание</string>
    <string name="goal">Цель</string>
    <string name="registrationStr">Регистрация</string>
    <string name="alyona">Alyona</string>
    <string name="userMail">alena@yandex.ru</string>
    <string name="userBirthday">02.09.2002</string>
    <string name="mailLayoutName">Почта</string>
    <string name="birthdateLayoutName">Дата рождения</string>
</resources>