<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp">

    <ImageView
        android:id="@+id/illustration_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/illustration_birthdate"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birthdate"
        style="@style/TextAppearance.LifeCalendar.Title.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_regular"
        android:layout_marginTop="32dp"
        android:text="@string/birthdate"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/illustration_birthdate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_day"
        style="@style/TextAppearance.LifeCalendar.TextInput.Light"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/day"
        app:layout_constraintEnd_toStartOf="@id/input_layout_month"
        app:layout_constraintTop_toTopOf="@id/input_layout_month">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:focusable="false"
            android:inputType="none"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_month"
        style="@style/TextAppearance.LifeCalendar.TextInput.Light"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="@string/month"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/birthdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingStart="12dp"
            android:focusable="false"
            android:inputType="none"
            android:paddingEnd="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_year"
        style="@style/TextAppearance.LifeCalendar.TextInput.Light"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/input_layout_month"
        app:layout_constraintStart_toEndOf="@id/input_layout_month">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="12dp"
            android:focusable="false"
            android:inputType="none"
            android:paddingEnd="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        style="@style/Widget.LifeCalendar.Button"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:text="@string/next"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>