<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="22dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<androidx.cardview.widget.CardView
            android:id="@+id/profileHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="25dp"
                android:src="@drawable/ic_arrow_back"
                />

            <TextView
                style="@style/TextAppearance.LifeCalendar.Subtitle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>-->

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/illustration_avatar"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            style="@style/TextAppearance.LifeCalendar.BodyText.16.Medium"
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar"/>

        <TextView
            style="@style/TextAppearance.LifeCalendar.BodyText.16.Medium"
            android:id="@+id/profileAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_70"
            android:text="@string/age"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileName"/>

        <TextView
            style="@style/TextAppearance.LifeCalendar.BodyText.16.Medium"
            android:id="@+id/profileInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_70"
            android:text="@string/information_main"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileAge"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileNameTextField"
            style="@style/Widget.LifeCalendar.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/profileInformation"
            android:hint="@string/name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.LifeCalendar.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:textColor="@color/grey_70"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            style="@style/TextAppearance.LifeCalendar.BodyText.16.Medium"
            android:button="@drawable/custom_checkbox"
            android:id="@+id/profileCheckboxFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:padding="10dp"
            android:text="@string/female_gender"
            app:layout_constraintTop_toBottomOf="@id/profileNameTextField"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <CheckBox
            style="@style/TextAppearance.LifeCalendar.BodyText.16.Medium"
            android:button="@drawable/custom_checkbox"
            android:id="@+id/profileCheckboxMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:padding="10dp"
            android:text="@string/male_gender"
            app:layout_constraintTop_toBottomOf="@id/profileCheckboxFemale"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileMailTextField"
            style="@style/Widget.LifeCalendar.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/profileCheckboxMale"
            android:hint="@string/mail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.LifeCalendar.MaterialComponents.TextInputEditText"

                android:layout_width="match_parent"
                android:textColor="@color/grey_70"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profilePassTextField"
            style="@style/Widget.LifeCalendar.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/profileMailTextField"
            android:hint="@string/password_head"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.LifeCalendar.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:textColor="@color/grey_70"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileAboutTextField"
            style="@style/Widget.LifeCalendar.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/profilePassTextField"
            android:hint="@string/about_self_head"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.LifeCalendar.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:height="142dp"
                android:textColor="@color/grey_70"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>